mac installation complete