@@ -1,6 +1,5 @@
 plugins {
     id 'application'
-    id 'org.openjfx.javafxplugin' version '0.1.0'
     id 'org.javamodularity.moduleplugin' version '1.8.12'
     id 'org.beryx.jlink' version '3.0.1'
 }
@@ -19,19 +18,23 @@ application {
     mainClass = 'org.arjun.j2pui.HelloApplication'
 }
 
-javafx {
-    version = '21'
-    modules = ['javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.base']
+jar{
+    manifest {
+        attributes(
+                'Main-class':'org.arjun.j2pui.HelloApplication'
+        )
+    }
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
 
 dependencies {
     implementation('org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0')
     implementation('com.github.Arjungowda1:j2pbridge:main-SNAPSHOT')
     implementation('org.fxmisc.richtext:richtextfx:0.11.2')
-    implementation 'org.openjfx:javafx-controls:21.0.3'
-    implementation 'org.openjfx:javafx-fxml:21.0.3'
-    implementation 'org.openjfx:javafx-base:21.0.3'
-    implementation 'org.openjfx:javafx-graphics:21.0.3'
+    implementation 'org.openjfx:javafx-controls:21.0.3:mac-aarch64'
+    implementation 'org.openjfx:javafx-fxml:21.0.3:mac-aarch64'
+    implementation 'org.openjfx:javafx-graphics:21.0.3:mac-aarch64'
+    implementation 'org.openjfx:javafx-base:21.0.3:mac-aarch64'
     testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
 }
@@ -44,13 +47,15 @@ jlink {
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages', '--bind-services']
     launcher {
         name = 'j2papp'
-        jvmArgs = ['--module-path', '$APPDIR/lib',
-                   '--add-modules', 'ALL-MODULE-PATH',
-                   '--add-opens', 'javafx.graphics/javafx.scene=org.arjun.j2pui',
-                   '--add-opens', 'javafx.controls/javafx.scene.control=org.arjun.j2pui']
     }
-    forceMerge 'javafx'
-    addExtraDependencies("javafx", "org.kordamp.bootstrapfx", "org.fxmisc.richtext")
+    addExtraDependencies("javafx","org.kordamp.bootstrapfx", "org.fxmisc.richtext")
+    jpackage {
+        imageName = 'J2PApp'
+        appVersion = '1.0.0'
+        vendor = 'Arjun Gowda'
+        installerType = 'dmg' // options: dmg, pkg, exe, deb, rpm, msi
+        skipInstaller = false
+    }
 }
 
 tasks.jlink {
